<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- Profil Gambar -->
    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profil"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person" />

    <!-- Nama dan Nomor -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cs_telkomsel"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_081293551227"
            android:textSize="14sp"
            android:textColor="@color/gray" />
    </LinearLayout>

    <!-- Tombol Edit -->
    <ImageView
        android:id="@+id/btnEdit"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/edit"
        android:layout_marginEnd="8dp"
        />

    <!-- Tombol Hapus -->
    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete"
        />
</LinearLayout>
